<resources>
    <string name="app_name">Gay Chat</string>
    <string name="login">Login</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="google">Google</string>
    <string name="descrition">Free and secure gay chat with encrypted message transmission without phone number</string>
    <string name="register">Register/Login</string>
    <string name="enter">Enter</string>
    <string name="title_activity_chat">Chat</string>
    <string name="conversation">Conversation</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="fill_data_correctly">Fill in data correctly</string>
    <string name="loading">Loading…</string>
    <string name="search_user">Search user by email</string>
    <string name="message">Message</string>
    <string name="dont_have_conversations">Dont have conversations</string>
    <string name="fillThePrefil">Fill in the prefil and upload user profile picture</string>
    <string name="cityTown">City</string>
    <string name="userAge">Age</string>
    <string name="userStatus">Status</string>
    <string name="save">Save</string>
    <string name="deleteUserProfile">Delete user profile (in development)</string>
    <string name="writeYourComment">Write your comment</string>
    <string name="thisAppNeedLocation">This application needs to enable localization</string>
    <string name="fillUserData">Fill user data</string>
    <string name="writeMessageChat">Write in the chat</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="chat">Chat</string>
    <string name="myprofile">My profile</string>
    <string name="uploadingImage">Uploading image</string>
    <string name="imageUploaded">Image uploaded</string>
    <string name="author">Web Android Developer Alexei</string>
    <string name="termAndCond">Terms and conditions</string>
    <string name="agreeTerminosAndCond">By clicking the start button you agree to the terms and conditions of use of this application</string>
    <string name="start">Start</string>
    <string name="myProfile">My profile</string>
    <string name="agreeTermiCond"><![CDATA[Accept terms & conditions]]></string>
    <string name="blockThisUser">Block this user</string>
    <string name="reportUserBehavior">Report user behavior</string>
    <string name="writeReason">Write the reason for blocking or reporting user misbehavior</string>
    <string name="block">Block</string>
    <string name="report">Report</string>
    <string name="infoSented">information sent to the developers team, thank you</string>
    <string name="delete">Delete</string>
</resources>