<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/carviewTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="5dp">
            <RelativeLayout
                android:padding="11dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/backImageConversationUser"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="201dp"
                    android:src="@drawable/backgorund"
                    android:contentDescription="@string/app_name"
                    />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/perfilImageConversationUser"
                    android:layout_width="151dp"
                    android:layout_height="151dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="161dp"
                    android:src="@drawable/user"
                    />
                <TextView
                    android:id="@+id/emailProfileConversationUser"
                    android:textSize="18sp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/perfilImageConversationUser"
                    android:text="@string/app_name"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/perfilChatUserInfo"
                    android:layout_below="@+id/emailProfileConversationUser"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center"
                    android:text="@string/chat"
                    android:textAllCaps="false"
                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/userDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardCornerRadius="5dp"
            android:layout_margin="24dp"
            android:background="@color/white"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/carviewTop">
            <LinearLayout
                android:orientation="vertical"
                android:padding="22dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/userNameConversationUser"
                    android:textStyle="bold"
                    android:padding="11dp"
                    android:textSize="16sp"
                    android:hint="@string/user_name"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/cityVisitUser"
                    android:textStyle="bold"
                    android:padding="11dp"
                    android:textSize="16sp"
                    android:layout_marginTop="33dp"
                    android:textColor="@color/black"
                    android:hint="@string/cityTown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="false"
                    tools:ignore="LabelFor" />
                <TextView
                    android:id="@+id/textViewTextAge"
                    android:textStyle="bold"
                    android:padding="11dp"
                    android:textSize="16sp"
                    android:layout_marginTop="33dp"
                    android:hint="@string/userAge"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/textViewStatus"
                    android:textStyle="bold"
                    android:padding="11dp"
                    android:textSize="16sp"
                    android:layout_marginTop="33dp"
                    android:hint="@string/userStatus"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_below="@+id/userDescription"
            android:orientation="vertical"
            android:layout_margin="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/blockThisUser"
                android:layout_marginTop="44dp"
                android:id="@+id/blockThisUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/reportUserBehavior"
                android:layout_marginTop="44dp"
                android:text="@string/reportUserBehavior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>