<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            app:cardElevation="22dp"
            android:layout_margin="66dp"
            android:layout_marginTop="77dp"
            android:minWidth="320dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="22dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/app_name"
                    android:layout_gravity="center"
                    android:layout_marginBottom="52dp"
                    android:textColor="@color/purple_500"
                    android:textSize="33dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/activity_description"
                    android:layout_gravity="center"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold"
                    android:textSize="19dp"
                    android:text="@string/register"
                    android:layout_marginBottom="34dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/textEmail"
                    android:hint="@string/email"
                    android:textSize="17sp"
                    android:layout_marginTop="22dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="false"
                    android:inputType="text"
                    tools:ignore="LabelFor,TextFields" />
                <EditText
                    android:id="@+id/textPassword"
                    android:textSize="17sp"
                    android:hint="@string/password"
                    android:layout_marginTop="22dp"
                    android:autofillHints="false"
                    android:inputType="text"
                    tools:ignore="LabelFor,TextFields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_marginTop="44dp"
                    android:layout_marginBottom="44dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/aceptTermCond"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/agreeTermiCond"
                        />
                    <Button
                        android:id="@+id/btn_email_login"
                        android:layout_marginTop="44dp"
                        android:textAllCaps="false"
                        android:text="@string/register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="ButtonStyle,NestedWeights" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:text="@string/descrition"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="77dp"
            android:layout_marginStart="44dp"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="77dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>