<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"   android:layout_marginBottom="55dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/carviewTopMyProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="5dp">
            <RelativeLayout
                android:padding="11dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imageBackgroundMyProfile"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="201dp"
                    android:src="@drawable/backgorund"
                    android:contentDescription="@string/app_name"
                    />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userImageProfileMyProfile"
                    android:layout_width="151dp"
                    android:layout_height="151dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="161dp"
                    android:src="@drawable/user"
                    />
                <TextView
                    android:id="@+id/userNameProfileMyProfile"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/userImageProfileMyProfile"
                    android:text="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ProgressBar
                    android:id="@+id/progressBarProfile"
                    android:visibility="gone"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_below="@+id/userNameProfileMyProfile"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDescriptionMyProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardCornerRadius="5dp"
            android:layout_margin="24dp"
            android:background="@color/white"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/carviewTopMyProfile">
            <LinearLayout
                android:orientation="vertical"
                android:padding="22dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editTextNameMyProfile"
                    android:textStyle="bold"
                    android:padding="11dp"
                    android:textSize="16sp"
                    android:hint="@string/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="false"
                    android:inputType="text"
                    tools:ignore="LabelFor" />
                <TextView
                    android:id="@+id/editTextCityMyProfile"
                    android:textStyle="bold"
                    android:padding="11dp"
                    android:textSize="16sp"
                    android:layout_marginTop="33dp"
                    android:textColor="@color/black"
                    android:hint="@string/cityTown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="false"
                    tools:ignore="LabelFor" />
                <EditText
                    android:id="@+id/editTextAgeMyProfile"
                    android:textStyle="bold"
                    android:padding="11dp"
                    android:textSize="16sp"
                    android:layout_marginTop="33dp"
                    android:hint="@string/userAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="false"
                    android:inputType="number"
                    tools:ignore="LabelFor" />
                <EditText
                    android:id="@+id/editTextStatusMyProfile"
                    android:textStyle="bold"
                    android:padding="11dp"
                    android:textSize="16sp"
                    android:layout_marginTop="33dp"
                    android:hint="@string/userStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="false"
                    android:inputType="textMultiLine"
                    tools:ignore="LabelFor" />
                <Button
                    android:id="@+id/perfilSaveUserInfoMyProfile"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:layout_gravity="center"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/leendaLinearLayoutMyProfile"
            android:layout_marginTop="44dp"
            android:layout_marginBottom="44dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_below="@+id/cardViewDescriptionMyProfile"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/writeYourCommentMyProfile"
                android:text="@string/writeYourComment"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/deleteUserProfileMyProfile"
                android:text="@string/deleteUserProfile"
                android:textStyle="bold"
                android:layout_marginTop="22dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>